# herbarium

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
camera/: urls.py  views.py
camera/forms/: forms.py
camera/static/camera/js/: camera.js
camera/templates/camera/: base.html  img_process.html  list.html
conf/: settings.py  urls.py
digital_herbarium/: admin.py  models.py  urls.py  views.py
digital_herbarium/migrations/: 0001_initial.py  0002_plant_ramarks_alter_plant_collector_and_more.py  0003_remove_plant_image_plant_specimen_image.py  0004_plant_info_card_image.py
digital_herbarium/templates/digital_herbarium/: base.html  home.html
