[project]
name = "herbarium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-rich>=1.13.0",
    "django-storages[s3]>=1.14.4",
    "environs[django]>=14.1.0",
    "pillow>=11.1.0",
    "psycopg[binary]>=3.2.4",
    "rapidocr>=2.0.3",
    "requests>=2.32.3",
    "whitenoise>=6.8.2",
]
